...
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginTop="@dimen/space_lg"
                    android:text="@string/profile_edit_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnChangePassword"
                    style="@style/Widget.TracerStudy.Button.Outlined"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginTop="@dimen/space_md"
                    android:text="@string/profile_change_password" />

...
